# font-generation

./: .gitignore  README.md  mypy.ini  pyproject.toml  setup.cfg
font_generation/: generate.py  train.py
font_generation/data/: FontStylesDataset.py  pil_to_tensor.py  transform.py
font_generation/fontutils/: Font.py  Glyph.py  hanzi_by_frequency.py  is_alphanum_char_code.py  load_all_fonts.py  parse_font_file.py  svg_to_pil.py
font_generation/model/: model.py  vgg_cx.py
scripts/: download_all_fonts.sh  download_deb_fonts.sh  download_google_fonts.sh  download_misc_zh_fonts.sh  download_ms_fonts.sh  download_noto_fonts.sh  download_vgg_model.sh
tests/: test_font_generation.py
